--- a/views/create_part_form.phtml
+++ b/views/create_part_form.phtml
@@ -10,12 +10,14 @@
 
         <label for="ShipmentDate">Когда поставили</label>
         <input type="datetime-local" id="shipment-date" name="ShipmentDate"><br>
-        <script>
-            let currentTime = new Date();
-            console.log(currentTime);
-            document.getElementById('shipment-date').value = currentTime;
-            document.getElementById('shipment-date').max = currentTime;
-        </script>
+
+        <label for="Supported">Введите принтеры, для которых подходит данная деталь</label><br>
+
+        <input type="hidden" name="Supported" id="Supported"
+            value="[
+                {&quot;Model&quot;:&quot;EPSON&quot;, &quot;Original&quot;:&quot;true&quot;},
+                {&quot;Model&quot;:&quot;CANON&quot;, &quot;Original&quot;:&quot;false&quot;},
+                ]"><br>
 
         <input type="Submit">
     </form>
