Forth day changes

--- a/views/create_part_form.phtml
+++ b/views/create_part_form.phtml
@@ -12,12 +12,12 @@
         <input type="datetime-local" id="shipment-date" name="ShipmentDate"><br>
 
         <label for="Supported">Введите принтеры, для которых подходит данная деталь</label><br>
-
         <input type="hidden" name="Supported" id="Supported"
             value="[
                 {&quot;Model&quot;:&quot;EPSON&quot;, &quot;Original&quot;:&quot;true&quot;},
-                {&quot;Model&quot;:&quot;CANON&quot;, &quot;Original&quot;:&quot;false&quot;},
+                {&quot;Model&quot;:&quot;CANON&quot;, &quot;Original&quot;:&quot;false&quot;}
                 ]"><br>
+
 
         <input type="Submit">
     </form>
