--- a/views/create_part_form.phtml
+++ b/views/create_part_form.phtml
@@ -57,6 +57,6 @@
             }
         </script>
 
-        <input type="button" onclick="sendForm()" text="Submit">
+        <input type="button" onclick="sendForm()" value="Отправить">
     </form>
 </div>
