--- a/views/default_page_view.phtml
+++ b/views/default_page_view.phtml
@@ -1,6 +1,79 @@
 <h1>Найти запчасти</h1>
-<form action="/get/parts/" method="GET">
-    <input type="text" placeholder="Модель принтера" name="PrinterModel">
+<form action="/get/parts/" method="GET" id="main-form">
+    <input type="text" placeholder="Модель принтера" name="PrinterModel" success>
     <input type="text" placeholder="Тип детали" name="PartType">
     <input type="submit">
+
+    <table style="visibility:hidden" id="display-table">
+        <tr>
+            <th>Название запчасти</th>
+            <th>Категория</th>
+            <th>Дата поставки</th>
+            <th>Оригинал</th>
+        </tr>
+    </table>
+
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+
+        table {
+            margin-top: 3em;
+        }
+    </style>
+
+    <script>
+        const form = document.getElementById("main-form");
+
+        form.addEventListener('submit', async (evt) => {
+            evt.preventDefault();
+
+            const xhr = new XMLHttpRequest();
+
+            const formData = new FormData(evt.target);
+            var params = `PrinterModel=${formData.get("PrinterModel")}&PartType=${formData.get("PartType")}`
+
+            xhr.open("GET", "/get/parts"+'?'+params, true);
+            xhr.send(formData);
+
+            xhr.onload = function () {
+                if (xhr.status != 200) {
+                    return;
+                }
+
+                displayResponse(xhr.response);
+
+            };
+        });
+
+        function displayResponse(response) {
+            const table = document.getElementById("display-table");
+
+            table.style.visibility = "visible";
+
+            var rowCount = table.rows.length;
+            for (var i = 1; i < rowCount; i++) {
+                table.deleteRow(1);
+            }
+
+            var json_response = JSON.parse(response);
+            console.log(response);
+            console.log(json_response);
+
+            json_response.forEach(element => {
+                var row = table.insertRow(-1);
+
+                var cell1 = row.insertCell(-1);
+                var cell2 = row.insertCell(-1);
+                var cell4 = row.insertCell(-1);
+                var cell3 = row.insertCell(-1);
+
+                cell1.innerHTML = element.PartName;
+                cell2.innerHTML = element.PartType;
+                cell3.innerHTML = element.isOriginal ? "Да" : "Нет";
+                cell4.innerHTML = element.ShipmentDate;
+            });
+        }
+    </script>
 </form>
